Cambios adicionando Campos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.contextPath=/api
 server.port=8081
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
